optimize and add service mobile responsive

--- a/src/app/layouts/component/content/content-column-list/content-tasks/sub-modal/sub-modal.component.scss
+++ b/src/app/layouts/component/content/content-column-list/content-tasks/sub-modal/sub-modal.component.scss
@@ -1,3 +1,5 @@
+@use './../../../../../../scss/mixins' as d;
+
 .form {
   display: flex;
   flex-direction: column;
@@ -5,6 +7,10 @@
   color: var(--color-text);
   padding: 1.5rem;
   width: 500px;
+  @include d.mobile {
+    max-width: 300px;
+    overflow-y: auto;
+  }
 
   .title {
     display: flex;
