--- a/src/app/layouts/component/content/content-column-list/content-tasks/sub-modal/edit-task-dialog/edit-task-dialog.component.html
+++ b/src/app/layouts/component/content/content-column-list/content-tasks/sub-modal/edit-task-dialog/edit-task-dialog.component.html
@@ -42,7 +42,7 @@
       </button>
     </div>
 
-    <button color="accent" mat-raised-button (click)="addSub()">
+    <button type="button" color="accent" mat-raised-button (click)="addSub()">
       <mat-icon>add</mat-icon>
       Add New Subtask
     </button>
