--- a/src/app/layouts/component/content/content-column-list/content-tasks/sub-modal/edit-task-dialog/edit-task-dialog.component.scss
+++ b/src/app/layouts/component/content/content-column-list/content-tasks/sub-modal/edit-task-dialog/edit-task-dialog.component.scss
@@ -1,3 +1,5 @@
+@use './../../../../../../../scss/mixins' as d;
+
 .form {
   display: flex;
   flex-direction: column;
@@ -5,6 +7,10 @@
   color: var(--color-text);
   padding: 1.5rem;
   width: 600px;
+  @include d.mobile {
+    max-width: 300px;
+    overflow-y: auto;
+  }
 
   .h1 {
     color: var(--color-text);
