--- a/src/app/layouts/component/header/action-form/add-task-dialog/add-task-dialog.component.html
+++ b/src/app/layouts/component/header/action-form/add-task-dialog/add-task-dialog.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" class="form" (ngSubmit)="submit($event)">
+<form [formGroup]="form" class="form" (ngSubmit)="submit()">
   <h1 class="h1" mat-dialog-title>Edit Task</h1>
 
   <div class="content" mat-dialog-content>
