--- a/src/app/layouts/component/header/header.component.html
+++ b/src/app/layouts/component/header/header.component.html
@@ -1,10 +1,9 @@
+<div class="logo">
+  <app-logo [isDark]="isDark$ | async  "></app-logo>
+</div>
 
-  <div class="logo">
-    <app-logo [isDark]="isDark$ | async  "></app-logo>
-  </div>
+<app-head [title]="title$ | async"></app-head>
 
-  <app-head [title]="title$ | async"></app-head>
-
-  <app-action-form></app-action-form>
+<app-action-form (delete)="deleteBoard()"></app-action-form>
 
 
