optimize and add service mobile responsive

--- a/src/app/layouts/component/content/content-column-list/content-tasks/sub-modal/sub-modal.component.html
+++ b/src/app/layouts/component/content/content-column-list/content-tasks/sub-modal/sub-modal.component.html
@@ -53,6 +53,7 @@
   <div class="actions" mat-dialog-actions>
 
     <button
+      class="btnForm"
       type="submit"
       (click)="submit()"
       mat-raised-button
