--- a/src/app/layouts/component/content/content-column-list/content-tasks/sub-modal/sub-modal.component.scss
+++ b/src/app/layouts/component/content/content-column-list/content-tasks/sub-modal/sub-modal.component.scss
@@ -60,6 +60,13 @@
   .actions {
     display: flex;
     justify-content: space-between;
+
+    .btnForm {
+      width: 100%;
+      margin-bottom: 1rem;
+      padding: 0;
+      margin-left: 0;
+    }
   }
 }
 
